Added food menu page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header>
         <img src="src/icon.png" class="iconImage"></img>
         <nav>
-            <a href="mainPage.html">Úvod</a>
-            <a href="mainMenu.html">Hlavní menu</a>
+            <a href="index.html">Úvod</a>
+            <a href="foodMenu.html">Hlavní menu</a>
             <a href="aboutUs.html">O nás</a>
             <a href="contact.html">Kontakt</a>
             <a href="news.html">Aktuality</a>
@@ -22,10 +22,12 @@
 
     </header>
 
-    <main class="backgroundImage mainPageBackgroundImage">
-        <h2>RESTAURACE U LOREM IPSUM</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-        <div class="lunchMenuButton">Polední menu</div>
+    <main>
+        <div class="backgroundImage wholePageBackgroundImage" style="background-image: url('src/backgroundMain.png');">
+            <h2>RESTAURACE U LOREM IPSUM</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            <div class="lunchMenuButton"><a href="foodMenu.html">Polední menu</a></div>
+        </div>
     </main>
 
     <footer>
