Responsilble design done

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="query.css">
     <title>Restaurace u Lorem Impsum</title>
 </head>
 
@@ -30,12 +31,12 @@
         <section class="basePageBackground">
             <div class="centeredContentDiv">
                 <h2>Naše historie</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde assumenda eveniet hic praesentium nisi? Quae placeat recusandae consequatur, corporis dolores enim. Maxime quasi velit labore perferendis magnam maiores est recusandae!
+                <p class="history-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde assumenda eveniet hic praesentium nisi? Quae placeat recusandae consequatur, corporis dolores enim. Maxime quasi velit labore perferendis magnam maiores est recusandae!
                 Rem facere odio vitae modi! Magnam nemo aliquid laudantium! Optio temporibus eos, deleniti porro nisi eligendi totam dolor explicabo sint ad.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias deserunt repellat, explicabo amet sequi recusandae commodi officiis? Libero error ea dolorum nemo! Alias, sunt cumque quae veritatis tempora corrupti laborum?
+                <p class="history-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias deserunt repellat, explicabo amet sequi recusandae commodi officiis? Libero error ea dolorum nemo! Alias, sunt cumque quae veritatis tempora corrupti laborum?
                 Nobis architecto voluptates quaerat commodi provident beatae, inventore aut temporibus quod recusandae, cumque enim, dolor quam quas amet voluptas exercitationem dignissimos consectetur praesentium non culpa possimus autem facere nam? Fuga.
                 Minima excepturi ipsa asperiores magnam eaque, quibusdam aspernatur cum quasi pariatur totam deleniti delectus dolorum alias sequi earum amet commodi impedit vero fugit architecto dicta veniam sed. Inventore, ea ullam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veniam nisi doloremque ducimus quasi cupiditate asperiores! Nam perspiciatis neque eum quo minus? Illo rem assumenda adipisci obcaecati error deserunt nisi?
+                <p class="history-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae veniam nisi doloremque ducimus quasi cupiditate asperiores! Nam perspiciatis neque eum quo minus? Illo rem assumenda adipisci obcaecati error deserunt nisi?
                 Nesciunt distinctio itaque sequi perspiciatis ex eaque ullam neque? Et eum quisquam omnis esse repudiandae ad reprehenderit, aspernatur eos architecto facere accusantium, velit, vero voluptate! Ut laudantium fuga aliquid blanditiis.</p>
             </div>
         </section>
