--- a/foodMenu.html
+++ b/foodMenu.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="query.css">
     <title>Restaurace u Lorem Impsum</title>
 </head>
 
@@ -46,7 +48,7 @@
                     <h2>Hlavní chod</h2>
                     <ul>
                         <li>
-                            <p>Smažený kuřecí řízek s bramborovou kaší</p>
+                            <p class="snicl">Smažený kuřecí řízek s bramborovou kaší</p>
                             <p>155,-</p>
                         </li>
                         <li>
