--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
     </header>
 
     <main>
-        <div class="backgroundImage wholePageBackgroundImage" style="background-image: url('src/backgroundMain.png');">
-            <h2>RESTAURACE U LOREM IPSUM</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
-            <div class="lunchMenuButton"><a href="foodMenu.html">Polední menu</a></div>
-        </div>
+        <section class="welcome-page">
+            <div class="backgroundImage wholePageBackgroundImage" style="background-image: url('src/backgroundMain.png');">
+                <h2 class="restaurace-heading">RESTAURACE U LOREM IPSUM</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <div class="lunchMenuButton"><a href="foodMenu.html">Polední menu</a></div>
+            </div>
+        </section>
     </main>
 
     <footer>
